fix: fix layout issue

--- a/.vitepress/theme/style.less
+++ b/.vitepress/theme/style.less
@@ -20,6 +20,20 @@
   display: none;
 }
 
+.VPNavBarTitle a.title span {
+  font-size: 18px;
+}
+
+.VPNavBarTitle a.title img {
+  width: 20px;
+  height: 20px;
+}
+
+.VPNavBarSearch {
+  justify-content: flex-end;
+  padding-right: 1.5rem;
+}
+
 .vp-doc div[class*='language-'] {
   border: solid 1px var(--vp-c-gray-2);
   box-shadow: var(--vp-shadow-2);
